# course-record-system

./: .gitignore  README.md  main.bat  pyproject.toml  requirements.txt
code/: main.py  operate.ipynb  streamlit_app.py
code/mod/: A_write_record.py  O_config.py  O_general.py
doc/: announcement.md  overview.md
