[project]
name = "course-record-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Bevis",email = "add412@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
